<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KYCDocAnalysis">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="top|center"
        android:background="@color/white"
        android:elevation="10sp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5sp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="25sp"
            android:paddingEnd="25sp"
            android:text="@string/kyc_document_analysis"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0C3645"
        android:orientation="vertical"
        android:padding="10sp">

        <ImageView
            android:id="@+id/inputImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/imgDescription"/>

        <LinearLayout
            android:id="@+id/process_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:padding="0sp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/kycDetect"
                android:layout_width="75dp"
                android:layout_height="36dp"
                android:layout_marginStart="5sp"
                android:letterSpacing="0.0"
                android:text="@string/detect"
                android:textSize="12sp" />

            <Button
                android:id="@+id/kycExtract"
                android:layout_width="80dp"
                android:layout_height="36dp"
                android:layout_marginTop="0sp"
                android:layout_marginBottom="0sp"
                android:layout_marginEnd="0sp"
                android:layout_marginStart="5sp"
                android:letterSpacing="0.0"
                android:text="@string/extract"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/selectDocument"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:padding="0sp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:scrollbarStyle="insideInset"
                android:spinnerMode="dialog"
                android:textColor="#076A8E" />

            <Button
                android:id="@+id/kycVerify"
                android:layout_width="70dp"
                android:layout_height="36dp"
                android:letterSpacing="0.0"
                android:layout_marginTop="0sp"
                android:layout_marginBottom="0sp"
                android:layout_marginEnd="5sp"
                android:layout_marginStart="5sp"
                android:text="@string/verify"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="#CDFFFFFF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plainText"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:padding="5sp"
                android:text="@string/data"
                android:textAllCaps="true"
                android:textColor="#0A6E93"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/jsonText"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5sp"
                android:text="@string/json"
                android:textAllCaps="true"
                android:textColor="#0A6E93"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/showResult"
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_marginTop="3sp"
            android:background="#E8E8E8"
            android:padding="10sp"
            android:scrollbars="vertical"
            android:textColor="@color/black" />

        <ScrollView
            android:id="@+id/showResultInTableView"
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_marginTop="3sp"
            android:background="#E8E8E8"
            android:contentDescription="@string/app_name"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/showResultInTable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:textColor="@color/black" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/copy"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:src="@drawable/copy"
                android:contentDescription="@string/imgDescription"/>

            <ImageView
                android:id="@+id/share"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:src="@drawable/share"
                android:contentDescription="@string/imgDescription"/>

            <ImageView
                android:id="@+id/saveJson"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:src="@drawable/save1"
                android:visibility="gone"
                android:contentDescription="@string/imgDescription"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>